<resources>
    <string name="app_name">Webshop</string>
    <string name="name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="email">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="phone">Telefonszám</string>
    <string name="address">Lakcím</string>
    <string name="buyer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="guestlogin">Bejelentkezés vendégként</string>
    <string name="addtocart">Kosárba</string>
    <string name="productname">Termék neve</string>
    <string name="description">Leírás</string>
    <string name="search">Keresés</string>
    <string name="logout">Kijelentkezés</string>
    <string name="settings">Beállítások</string>
    <string name="cart">Kosár</string>
    <string name="view">Nézet</string>
    <string name="delete">Törlés</string>

    <string-array name="shopping_item_names">
        <item>Asztalszám</item>
        <item>Tortadísz</item>
        <item>Lufi</item>
        <item>Székmasni</item>
        <item>Vendégkönyv</item>
        <item>Konfetti</item>
        <item>Rózsaszirom</item>
        <item>Gyűrűpánra</item>
        <item>Toll</item>
        <item>Fa karika dekoráció</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Fekete asztalszámok, fa pálcikán. 0 és 9 közötti számokkal (1-től 10-ig számozhatók velük az asztalok).</item>
        <item>Elegáns, fekete sziluett tortadísz, Mr és Mrs felirattal.</item>
        <item>Óriás kerek lufi, fekete Mr felirattal, kb. 1 méter átmérőjű (0,4 m3 hélium szükséges a feltöltéséhez).</item>
        <item>Arany színű szatén székmasni.</item>
        <item>Esküvői vendégkönyv, púderrózsaszín borítóval és rose gold színű „for sweet memories" felirattal. 22 lapot (44 üres oldalt) tartalmaz.</item>
        <item>Arany papír csillagokat kilövő konfetti ágyú.</item>
        <item>Bordó színű, bordázott rózsaszirom. 100 db-os csomagban rendelhető.</item>
        <item>Fehér színű gyűrűpárna, fehér csipkével, barna masnival és apró rózsa díszítéssel.</item>
        <item>Elegáns tollkészlet az esküvői szertartáshoz vagy az esküvői vendégkönyv mellé. A toll talapzata fehér színű.</item>
        <item>Mr és Mrs feliratú kerek függő dekoráció fából, amely ízlés szerint festhető vagy díszíthető. Használhatod háttér dekorációnak, a székre akasztva vagy autó dekorációként is.</item>
    </string-array>

    <array name="shopping_item_images">
        <item>@drawable/asztalszam</item>
        <item>@drawable/tortadisz</item>
        <item>@drawable/lufi</item>
        <item>@drawable/szekmasni</item>
        <item>@drawable/vendegkonyv</item>
        <item>@drawable/konfetti</item>
        <item>@drawable/rozsaszirom</item>
        <item>@drawable/gyuruparna</item>
        <item>@drawable/toll</item>
        <item>@drawable/dekoracio</item>
    </array>

    <array name="shopping_item_price">
        <item>2490 Ft</item>
        <item>2990 Ft</item>
        <item>1490 Ft</item>
        <item>690 Ft</item>
        <item>7990 Ft</item>
        <item>1890 Ft</item>
        <item>690 Ft</item>
        <item>5990 Ft</item>
        <item>3290 Ft</item>
        <item>7990 Ft</item>
    </array>
</resources>