<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/cart"
        android:icon="@drawable/shopping_cart"
        android:title="@string/cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/view"
        android:title="@string/view"
        android:icon="@drawable/grid_view"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        app:showAsAction="always" />
</menu>